fixed text alignment

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 .background{
     width: 100%;
-    height: 84.8vh;
+    height: 100vh;
     background-color: #333;
     opacity: 0.9;
     text-align: center;
@@ -14,9 +14,9 @@
     align-content: center;
     justify-content: center;
     justify-items: center;
-    padding-left: 350px;
-    padding-right: 350px;
-    padding-top: 190px;
+    padding-right: 20%;
+    padding-top: 20%;
+    padding-left: 20%;
 }
 .text{
     width: 100%;
